--- a/res/layout/download_view.xml
+++ b/res/layout/download_view.xml
@@ -2,13 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="right"
     android:orientation="vertical" >
-    
-            <ListView
-            android:id="@+id/downloadedlist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-        </ListView>
+    <TextView
+        android:id="@+id/spaceAvailableTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/space_available" />
+
+    <ListView
+        android:id="@+id/downloadedlist"
+        android:layout_width="match_parent"
+        android:layout_height="416dp" >
+    </ListView>
 
 </LinearLayout>
